@@ -15,6 +15,8 @@ Core and Builtins
 - Issue #8417: Raise an OverflowError when an integer larger than sys.maxsize is
   passed to bytearray.
 
+- Issue #7072: isspace(0xa0) is true on Mac OS X
+
 Library
 -------
 
